bynkc/tests/fixtures/positive/36_static_method/input.bynk
commons test {
  type Counter = { count: Int }

  fn Counter.zero() -> Counter {
    Counter { count: 0 }
  }

  fn first() -> Counter {
    Counter.zero()
  }
}
