bynkc/tests/fixtures/negative/163_map_unkeyable_key/input.bynk
commons bad {
  type Order = {
    id: String,
  }

  fn count(m: Map[Order, Int]) -> Int {
    m.length()
  }
}
